--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,8 +8,11 @@ environment:
   flutter: ">=3.3.0"
 
 dependencies:
+  camera: ^0.11.0+2
   flutter:
     sdk: flutter
+  google_mlkit_face_detection: ^0.12.0
+  image: ^4.5.0
   plugin_platform_interface: ^2.0.2
 
 dev_dependencies:
