--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,8 @@ dependencies:
   google_mlkit_face_detection: ^0.12.0
   image: ^4.5.0
   plugin_platform_interface: ^2.0.2
+  shared_preferences: ^2.3.4
+  tflite_flutter: ^0.11.0
 
 dev_dependencies:
   flutter_test:
@@ -30,4 +32,4 @@ flutter:
         pluginClass: FrcPlugin
 
   # assets:
-  #   - images/a_dot_burr.jpeg
+  #   - assets/
