--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   image: ^4.5.0
+  shared_preferences: ^2.3.4
 
 dev_dependencies:
   integration_test:
